[package]
name = "dotprot"
version = "0.4.0"
edition = "2021"
description = "Lock up .env files (and anything in .prot) inside a 1Password vault."
license = "MIT"
repository = "https://github.com/jstilwell/dotprot"
homepage = "https://github.com/jstilwell/dotprot"
keywords = ["1password", "env", "dotenv", "secrets", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "dotprot"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
tempfile = "3"
anyhow = "1"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
